added h1 tag to test if displaying in browser

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <title>Articles and Products</title>
   </head>
   <body>
-  <h1>For testing purposes</h1>
+  <h1>For testing purposes (main.hbs)</h1>
     {{{body}}}
   </body>
 </html>
