--- a/views/product.hbs
+++ b/views/product.hbs
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Products</title>
+  <title>Catalog</title>
 </head>
 <body>
-  <div class="product">
-    <h2>product: {{name}}</h2>
-    <p>price: {{price}}</p>
-    <p>inventory: {{inventory}}</p>
-    <p>id: {{id}}</p>
+<h1>product.hbs</h1>
+  {{#each catalog}}
+  <div class = 'product'>
+    <h3>Product: {{name}}</h3>
+    <p>Price: ${{price}}</p>
+    <p>Inventory: {{inventory}}</p>
+    <p>ID: {{id}}</p>
   </div>
+  {{/each}}
 </body>
 </html>
