working on new to work

--- a/views/new.hbs
+++ b/views/new.hbs
@@ -21,5 +21,12 @@
     <br><br>
     <input type="submit" value="Submit">
   </form>
+
+  <div class='product'>
+    <h3>Product: {{name}}</h3>
+    <p>Price: ${{price}}</p>
+    <p>Inventory: {{inventory}}</p>
+    <p>ID: {{id}}</p>
+  </div>
 </body>
 </html>
