--- a/views/product.hbs
+++ b/views/product.hbs
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>product.hbs</h1>
+<h2>{{deleteSuccess}}</h2>
   <div class='product'>
     <h3>Product: {{name}}</h3>
     <p>Price: ${{price}}</p>
